--- a/main.css
+++ b/main.css
@@ -1,3 +1,57 @@
+.github-org-activity{
+    width: 100%;
+    min-height: 100%;
+    position: relative;
+}
+
+
+/*
+    Users
+*/
+.github-org-activity .users{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.github-org-activity .users > *{
+    padding: 0 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.github-org-activity .users button{
+    width: 4em;
+    height: 4em;
+    text-align: center;
+    border-radius: 50%;
+    border: 0;
+    padding: 0;
+    margin: 0;
+    
+    position: relative;
+}
+
+.github-org-activity .users button img{
+    max-width: 80%;
+    max-height: 80%;
+    border-radius: 50%;
+    padding: 0;
+    margin: 0;
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+/*
+    Viz
+*/
 .event{
     position: absolute;
     width: 1em;
