--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 .github-org-activity{
     width: 100%;
     min-height: 100%;
-    position: relative;
 }
 
 
@@ -11,8 +10,10 @@
 .github-org-activity .users{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    overflow-x: auto;
+    width: 100%;
 }
 
 .github-org-activity .users > *{
@@ -52,13 +53,31 @@
 /*
     Viz
 */
+.repos{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    height: 80vh;
+}
+
+.repo-events{
+    max-width: 20%;
+    min-height: 80%;
+    position: relative;
+    flex: 1;
+    outline: 1px solid #EEE;
+}
+
+
 .event{
     position: absolute;
     width: 1em;
     height: 1em;
     border-radius: 50%;
     opacity: 0.8;
-    transform: translateY(50%);
+    transform: translate(-50%, 50%);
 }
 
 .event::before{
