--- a/main.css
+++ b/main.css
@@ -1,3 +1,29 @@
+/*
+    Top
+*/
+
+
+header{
+    text-align: center;
+}
+
+header h1{
+    display: inline-block;
+    margin: 0;
+    padding: 1em;
+}
+header button{
+    background-color: transparent;
+    border: 1px solid grey;
+    border-radius: 33%;
+    width: 3em;
+    height: 3em;
+    padding: 0;
+    margin: 0;
+}
+
+
+
 .github-org-activity{
     width: 100%;
     min-height: 100%;
@@ -37,8 +63,8 @@
 }
 
 .github-org-activity .users button img{
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 75%;
+    max-height: 75%;
     border-radius: 50%;
     padding: 0;
     margin: 0;
@@ -64,7 +90,7 @@
 
 .repo-events{
     max-width: 20%;
-    min-height: 80%;
+    height: 100%;
     position: relative;
     flex: 1;
     outline: 1px solid #EEE;
@@ -76,7 +102,6 @@
     width: 1em;
     height: 1em;
     border-radius: 50%;
-    opacity: 0.8;
     transform: translate(-50%, 50%);
 }
 
